Added option -m to GFS to control formatting of timestamps in log file.

Added 'exit' as synonym for 'quit' in yaz-client

Possible compatibility problems with earlier versions marked with '*'.

Added support for specifying SRW resultSetId + resultSetIdleTime in a
Generic Frontend Server's search handler. Refer to include/yaz/backend.h
for the new members. Patch by Ko van der Sloot.

Added support for SRU POST. It is supported for content-type
application/x-www-form-urlencoded only. Patch by Ko van der Sloot.

Do not build the separate Multi-threaded (MT) library libyazthread.la.
Instead make the library libyaz.la multi-threaded. Threading as a whole
can still be disabled by configure option --disable-threads. Previosly, 
with older GLIBCs there were problems with MT libs under Apache. This
has now been fixed a long time ago.

Fixed bugs in yaz_log that occurred on Sparc Solaris in Multi-threaded
applications.

CQL module modified to be case insensitive for relations/indexes/operations.

Fixed bug in CQL transform code: incorrect value relationModifieder
was used.

Added 'show all' command for yaz-client which retrieves all results
for last search.

Added new yaz-client, xmles, which takes a (private) OID and
a document to be sent as an extended service request.

Describe new yaz-client commands wait_response and set_auto_wait.

Increase TCP/IP listener backlog from 3 (which I am guessing was
copied from the SunOS manual entry way back when) so SOMAXCONN, so
that the socket will queue as many incoming connections as it's able
to handle ongoing connections.  In other words, it will never now
refuse a connection that it would be able to handle merely because
it's not got around to accepting() enough of the pending connections
yet.  This is the behaviour anyway under Linux, where the listen()
argument is ignored; but not under BSD and on systems such as
MS-Windows that use BSD-derived TCP/IP stacks.  The behaviour of